# cohesion-analysis

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  LICENSE  Makefile  README.md  pyproject.toml
configs/: base.yaml  debug.yaml  default.yaml  predict.yaml  server.yaml  test.yaml
configs/callbacks/: early_stopping.yaml  model_checkpoint.yaml  progress_bar.yaml  stochastic_weight_averaging.yaml
configs/datamodule/: all.yaml  all_wo_kc.yaml  jcre3.yaml
configs/datamodule/base/: base.yaml
configs/datamodule/predict/: custom.yaml
configs/datamodule/test/: fuman.yaml  jcre3.yaml  kc.yaml  kwdlc.yaml  wac.yaml
configs/datamodule/train/: fuman.yaml  jcre3.yaml  kc.yaml  kwdlc.yaml  wac.yaml
configs/datamodule/valid/: fuman.yaml  jcre3.yaml  kc.yaml  kwdlc.yaml  wac.yaml
configs/logger/: wandb.yaml
configs/model/: baseline.yaml  disentangled_lora.yaml
configs/optimizer/: adamw.yaml
configs/scheduler/: constant_schedule_with_warmup.yaml  cosine_schedule_with_warmup.yaml  linear_schedule_with_warmup.yaml
configs/trainer/: default.yaml
scripts/: aggregator.py  build_all_datasets.sh  build_dataset.py  build_datasets.sh  confidence_interval.py  constants.py  postprocess_ckpt.py  t_test.py  verify_target.py
src/: api_server.py  bertknp_options.txt  configure.py  predict.py  preprocess.py  scorer.py  template.html  test.py  train.py
src/analyzer/: analyzer.py  config.example.ini
src/callbacks/: __init__.py  prediction_writer.py
src/data_loader/: data_loaders.py
src/data_loader/dataset/: __init__.py  commonsense_dataset.py  pas_dataset.py  read_example.py
src/datamodule/: datamodule.py
src/datamodule/dataset/: __init__.py  base.py  cohesion.py
src/datamodule/example/: __init__.py  kyoto.py
src/logger/: logger.py  logger_config.json  visualization.py
src/metrics/: __init__.py  cohesion.py
src/model/: loss.py  metric.py  model.py
src/model/sub/: mask.py
src/modules/: __init__.py  cohesion.py
src/modules/model/: loss.py  model.py
src/prediction/: inference.py  prediction_writer.py
src/server/: response.py  schema.py
src/trainer/: base_trainer.py  trainer.py
src/utils/: constants.py  filter.py  parse_config.py  sub_document.py  util.py
src/writer/: json.py  knp.py
sweep/: deberta-large.yaml
tests/: conftest.py  test_dataset.py  test_feature.py  test_scorer.pptx  test_scorer.py
tests/data/expected/example/: 1.json
tests/data/expected/score/: 0.json
tests/data/gold/: 0.knp
tests/data/knp/: w201106-0000060050.knp  w201106-0000060560.knp  w201106-0000060877.knp
tests/data/pred/: 0.knp
tests/data/preprocess/: 950103055-001-0.knp  950103055-001-1.knp  950103055-001-2.knp  950103055-005.knp
tests/data/reparsed/: w201106-0000060050.knp  w201106-0000060560.knp  w201106-0000060877.knp
